@startuml
skinparam classAttributeIconSize 0
class Caller {
    - moneyAmount : float
    + AddMoney() : void
    + StoreMoney() : float
    + UsePhoneBooth(Phonebooth phonebooth) : void 

}
class Phonebooth {
    - price : float
    - number : string
    + Call() : bool
    + ReturnMoney() : float
    - RemoveMoney() : float
}


class Receiver {
    - number : string
    - phone : Phone
    + HangUp() : void
    + PickUp(Phone phone) : void
}

class Phone {

}

Caller --|> Receiver

Caller "1" --> "1" Phonebooth
Phonebooth "1" -- "1,*" Receiver

note right of Receiver
  The cardinality of the link Phonebooth -> Reciever
  is a 1,* because the Receiver can be a number like 911
end note

@enduml